# log2notion

./: .gitignore  CMakeLists.txt  README.txt
etc/: readname.cpp
script/: compile.sh  plot_gnss.sh
src/: auto_plotgnss.cpp  gnss.hpp  log2notion.cpp  log2notion.hpp  log2notion_v2.cpp  old_log2notion.hpp
